[package]
name = "chat_sieve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15.0", features = ["full"]}
google-youtube3 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
obs-wrapper = "0.3"

[lib]
name = "chat_sieve"
crate-type = ["cdylib"]